--- a/OrignalMP/pages/index/index.wxss
+++ b/OrignalMP/pages/index/index.wxss
@@ -6,14 +6,7 @@
   color: #aaa;
 }
 
-.userinfo-avatar {
-  overflow: hidden;
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.usermotto {
-  margin-top: 200px;
+.button {
+    background-color: brown;
+    height: 50px;
 }
