--- a/OrignalMP/app.wxss
+++ b/OrignalMP/app.wxss
@@ -1,10 +1,19 @@
 /**app.wxss**/
+
 .container {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
+  padding: 10rpx 0;
+} 
+
+.row {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50rpx 0pt;
 } 
