--- a/OrignalMP/pages/index/index.wxss
+++ b/OrignalMP/pages/index/index.wxss
@@ -1,12 +1,9 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #aaa;
-}
 
 .button {
-    background-color: brown;
-    height: 50px;
+  display: flex;
+  background-color:#352066;
+  height: 60pt;
+  flex-basis: 30%;
+  color: aliceblue;
 }
