--- a/OrignalMP/pages/index/index.wxml
+++ b/OrignalMP/pages/index/index.wxml
@@ -1,24 +1,26 @@
 <!--index.wxml-->
+
 <view class="container">
-    <view class="row">
+  <button class="setbutton" bindtap="goSetting">设置</button>
+  <view class="row">
+    <!-- <view class="row">
       <button class="button">{{note}}</button>
       <button class="button" >{{scale}}</button>
       <button class="button" bindtap="tap">测试</button>
-    </view>
+    </view> -->
     
-    <view class="row">
-      <button class="button" bind:touchstart="touchstartHalfStep" bind:touchend="touchendHalfStep" >#半音</button>
-      <button class="button" bind:touchstart="touchstartOctave" bind:touchend="touchendOctave" >中音</button>
+    <view class="column">
       <button class="button" bind:touchstart="touchstartTwoOctaves" bind:touchend="touchendTwoOctaves" >高音</button>
+      <button class="button" bind:touchstart="touchstartOctave" bind:touchend="touchendOctave" >中音</button>
+      <button class="button" bind:touchstart="touchstartHalfStep" bind:touchend="touchendHalfStep" >#半音</button>
     </view>
-    <view class="row">
-      <button class="button" bind:touchstart="touchstart1" bind:touchend="touchend1" >1</button>
-      <button class="button" bind:touchstart="touchstart2" bind:touchend="touchend2" >2</button>
+
+    <view class="column">
       <button class="button" bind:touchstart="touchstart4" bind:touchend="touchend4" >4</button>
+      <button class="button" bind:touchstart="touchstart2" bind:touchend="touchend2" >2</button>
+      <button class="button" bind:touchstart="touchstart1" bind:touchend="touchend1" >1</button>
     </view>
-    <view class="row">
-   
-      <button class="button" bindtap="goSetting">setting</button>
-    </view>
+</view>
+
 </view>
 
