--- a/OrignalMP/pages/index/index.wxss
+++ b/OrignalMP/pages/index/index.wxss
@@ -5,28 +5,41 @@
   display: flex;
   flex-direction: column;
   align-items:stretch;
-  justify-content: space-around;
-  background-color: rgb(255, 0, 157);
+  /* background-color: rgb(255, 0, 157); */
+  height: 320rpx;
 } 
 
 
 .row {
   display: flex;
   flex-direction: row;
-  justify-content:space-around;
-  background-color: aqua;
+  justify-content: space-around;
+  /* background-color: aqua; */
+
 } 
 
 .column {
   display: flex;
   flex-direction: column;
-  background-color: brown;
+  align-items: center;
+  width: 50%;
+  /* background-color: brown; */
 } 
 
 .button {
   display: flex;
-  width: 40%;
-  background-color:#352066;
+  background-color:#20663b;
   color: aliceblue;
-  margin: 10pt;
+  width:85%;
+  height: 70rpx;
+  margin: 5pt;
+  align-items: center;
+  justify-content: center;
+  border-radius:12pt;
+  
+}
+
+.setbutton {
+    width:100pt;
+    height: 30pt;
 }
